--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,7 +34,8 @@
             <ul class="nav navbar-nav">
               <li><%= link_to "<i class='fa fa-user'></i> Account".html_safe, "#"%></li>
               <li><%= link_to "<i class='fa fa-shopping-cart'></i> Cart".html_safe, "#"%></li>
-              <li><%= link_to "<i class='fa fa-lock'></i> Login".html_safe, "#"%></li>
+              <li><%= link_to "<i class='fa fa-user-plus'></i> Sign up".html_safe, signup_path %></li>
+              <li><%= link_to "<i class='fa fa-lock'></i> Login".html_safe, "#" %></li>
             </ul>
           </div>
         </div>
