Commit on branch updating-users

--- a/app/assets/stylesheets/color.scss
+++ b/app/assets/stylesheets/color.scss
@@ -37,3 +37,7 @@ $tangerine: #FC9A11;
 $dark-gray: #ADB2B2;
 $suva-gray: #8D8D8D;
 $gray: #999999;
+$gray-medium-light: #eaeaea;
+$gray-light: #777;
+$gray: #555;
+$gray-darker: #222;
