--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1015,6 +1015,17 @@ h2.title {
   background:none;
 }
 
+/* Users index */
+#users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid $gray-lighter;
+  }
+}
+
 /********************************Shop CSS********************************/
 #advertisement {
   padding-bottom: 45px;
