--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,7 +34,7 @@
             <ul class="nav navbar-nav">
               <li><%= link_to "<i class='fa fa-shopping-cart'></i> Cart".html_safe, "#"%></li>
               <% if logged_in? %>
-                <!-- <li><%= link_to t(".user"), users_path %></li> -->
+                <li><%= link_to t(".user"), admin_users_path %></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                     <i class="fa fa-user"></i><%= t ".account" %>
@@ -42,7 +42,7 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li><%= link_to t(".profile"), current_user %></li>
-                    <li><%= link_to t(".settings"), "#" %></li>
+                    <li><%= link_to t(".settings"), edit_user_path(current_user) %></li>
                     <li class="divider"></li>
                     <li><%= link_to t(".log_out"), logout_path, method: :delete %></li>
                   </ul>
