--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -11,7 +11,15 @@
             <ul class="nav navbar-nav">
               <% if logged_in? %>
                 <li><%= link_to t(".user"), admin_users_path %></li>
-                <li><%= link_to t(".items"), admin_products_path %></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    <%= t ".item"%>
+                    <b class="caret"></b>
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><%= link_to t(".all_items"), admin_products_path %></li>
+                    <li><%= link_to t(".add_new"), new_admin_product_path %></li>
+                  </ul>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                     <i class="fa fa-user"></i><%= t ".account" %>
