--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
     <div class="signup-form">
       <h2 class="center-parent"><%= t ".sign_up_title"%></h2>
       <%= form_for @user, url: signup_path do |f| %>
-        <%= render "shared/error_messages" %>
+        <%= render "shared/error_messages", object: f.object%>
         <%= f.text_field :name, placeholder: t(".enter_name"), class: "form-control" %>
         <%= f.email_field :email, placeholder: t(".enter_email"), class: "form-control" %>
         <%= f.password_field :password, placeholder: t(".enter_pass"), class: "form-control" %>
