--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,10 +32,24 @@
         <div class="col-sm-8">
           <div class="shop-menu pull-right">
             <ul class="nav navbar-nav">
-              <li><%= link_to "<i class='fa fa-user'></i> Account".html_safe, "#"%></li>
               <li><%= link_to "<i class='fa fa-shopping-cart'></i> Cart".html_safe, "#"%></li>
-              <li><%= link_to "<i class='fa fa-user-plus'></i> Sign up".html_safe, signup_path %></li>
-              <li><%= link_to "<i class='fa fa-lock'></i> Login".html_safe, "#" %></li>
+              <% if logged_in? %>
+                <!-- <li><%= link_to t(".user"), users_path %></li> -->
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    <i class="fa fa-user"></i><%= t ".account" %>
+                    <b class="caret"></b>
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><%= link_to t(".profile"), current_user %></li>
+                    <li><%= link_to t(".settings"), "#" %></li>
+                    <li class="divider"></li>
+                    <li><%= link_to t(".log_out"), logout_path, method: :delete %></li>
+                  </ul>
+                </li>
+              <% else %>
+                <li><%= link_to "<i class='fa fa-lock'></i> Login".html_safe, login_path %></li>
+              <% end %>
             </ul>
           </div>
         </div>
