--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,20 +1,18 @@
 <% provide :title, t(".sign_up_title") %>
-<h1 class="center-parent"><%= t ".sign_up_title"%></h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for @user, url: signup_path do |f| %>
-      <%= render "shared/error_messages" %>
-      <%= f.label :name, t(".name") %>
-      <%= f.text_field :name, placeholder: t(".enter_name"), class: "form-control" %>
-      <%= f.label :email, t(".email") %>
-      <%= f.email_field :email, placeholder: t(".enter_email"), class: "form-control" %>
-      <%= f.label :password, t(".password") %>
-      <%= f.password_field :password, placeholder: t(".enter_pass"), class: "form-control" %>
-      <%= f.label :address, t(".address") %>
-      <%= f.text_field :password, placeholder: t(".enter_address"), class: "form-control" %>
-      <%= f.label :address, t(".phone") %>
-      <%= f.text_field :password, placeholder: t(".enter_phone"), class: "form-control" %>
-      <%= f.submit t(".signup"), class: "btn btn-primary" %>
-    <% end %>
+    <div class="signup-form">
+      <h2 class="center-parent"><%= t ".sign_up_title"%></h2>
+      <%= form_for @user, url: signup_path do |f| %>
+        <%= render "shared/error_messages" %>
+        <%= f.text_field :name, placeholder: t(".enter_name"), class: "form-control" %>
+        <%= f.email_field :email, placeholder: t(".enter_email"), class: "form-control" %>
+        <%= f.password_field :password, placeholder: t(".enter_pass"), class: "form-control" %>
+        <%= f.password_field :password_confirmation, placeholder: t(".enter_pass"), class: "form-control" %>
+        <%= f.text_field :address, placeholder: t(".enter_address"), class: "form-control" %>
+        <%= f.text_field :phone, placeholder: t(".enter_phone"), class: "form-control" %>
+        <%= f.submit t(".signup"), class: "btn btn-primary" %>
+      <% end %>
+    </div>
   </div>
 </div>
