--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,7 +34,9 @@
             <ul class="nav navbar-nav">
               <li><%= link_to "<i class='fa fa-shopping-cart'></i> Cart".html_safe, "#"%></li>
               <% if logged_in? %>
-                <li><%= link_to t(".user"), admin_users_path %></li>
+                <% if current_user.admin? %>
+                  <li><%= link_to t(".admin_page"), admin_users_path %></li>
+                <%end%>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                     <i class="fa fa-user"></i><%= t ".account" %>
